# gtrending

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: checks.yml  gh-shell.yml  pypi_publish.yml
docs/: API.rst  conf.py  index.rst  requirements.txt  requirements_37.txt
docs/API/: fetch.rst  gtrending.rst  index.rst  paramutils.rst
docs/fetch/: dev.rst  index.rst  repo.rst
docs/paramutils/: index.rst  language.rst  spoken-language.rst
gtrending/: __init__.py  __main__.py  cli.py  fetch.py  paramutils.py  scrape.py
gtrending/_data/: languages.json  spoken_languages.json
tests/: conftest.py  test_check.py  test_check_language.py  test_check_since.py  test_check_spoken_language.py  test_cli.py  test_collection_lists.py  test_convert.py  test_fetch_developers.py  test_fetch_repos.py  test_languages_list.py  test_scrape.py  test_spoken_languages.py
tests/cli/: test_cli_collection_lists.py  test_developers.py  test_errors.py  test_execution.py  test_repos.py  test_repr.py
