[tool.poetry]
name = "gtrending"
version = "0.5.1"
description = "Trending repositories and developers on GitHu"
authors = ["hedy <hedy@tilde.cafe>"]
license = "MIT"
readme = "README.md"
documentation = "https://gtrending.readthedocs.io/en/latest/"
repository = "https://github.com/hedyhli/gtrending"
keywords = ["github", "github-trending"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
gtrending = "gtrending.cli:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"
black = "^23.3.0"
codespell = "^2.2.4"
Sphinx = "^7.0.0"
furo = "^2023.5.20"
sphinx-copybutton = "^0.5.2"
pylint = "^2.17.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
